# avanti_plugin

./: CMakeLists.txt
libacfutils/include/acfutils/: glew.h
src/: avanti.c  avanti.h  avanti_gui.cpp  avanti_gui.h  commands.c  commands.h  file_io.c  file_io.h  pfd.c  pfd.h  units_conv.c  units_conv.h
